tests/examples/bad/class_member_method_invalid_args2.lat
int main() {
    A a;
    B b;
    C c;
    a.f(b);
    a.f(c);
    
    return 1;
}
 
class A {
    int a;
    int f(B a) {return 1;}
}

class B {}
class C {}

